tests/ui/async-await/issue-69446-fnmut-capture.stderr
error: async closure does not implement `FnMut` because it captures state from its environment
  --> $DIR/issue-69446-fnmut-capture.rs:19:9
   |
LL |     bar(move || async {
   |     --- ^^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `bar`
  --> $DIR/issue-69446-fnmut-capture.rs:12:25
   |
LL | async fn bar<T>(_: impl FnMut() -> T)
   |                         ^^^^^^^^^^^^ required by this bound in `bar`

error: aborting due to 1 previous error

